# TotalGBS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build_gba.yml
src/: CMakeLists.txt
src/libgbs/: CMakeLists.txt  gbs.c  gbs.h
src/libgbs/LR35902/: LR35902.h
src/libgbs/gba_apu_shim/: CMakeLists.txt  gb_apu.c  gb_apu.h
src/platform/common/: CMakeLists.txt
src/platform/common/m3u/: m3u.c  m3u.h
src/platform/common/wav_writer/: wav_writer.c  wav_writer.h
src/platform/gba/: CMakeLists.txt  io_ezfo.c  io_ezfo.h  main.c
src/platform/gba/ff16/: diskio.c  ffconf.h
src/platform/pc/: CMakeLists.txt  main.c
tools/: rom-converter.py
